--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -83,6 +83,8 @@ header {
     text-align: center;
     color: #fff;
     background: #18bc9c;
+	background-size: cover;
+	background-image: url(img/sky.jpg)
 }
 
 header .container {
