--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -84,7 +84,7 @@ header {
     color: #fff;
     background: #18bc9c;
 	background-size: cover;
-	background-image: url('https://farm3.staticflickr.com/2824/11853317786_aa636f15a0_c.jpg');
+	background-image: url('http://i.imgur.com/AmWThvw.jpg');
 }
 
 header .container {
