--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -84,7 +84,7 @@ header {
     color: #fff;
     background: #18bc9c;
 	background-size: cover;
-	background-image: url('http://farm9.staticflickr.com//8868//18205140545_c48ca49018_h.jpg');  /* http://i.imgur.com/AmWThvw.jpg */
+	background-image: url('http://i.imgur.com/sh19kFj.jpg');  /* http://farm9.staticflickr.com//8868//18205140545_c48ca49018_h.jpg */
 }
 
 header .container {
