changed about section background
-

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -184,6 +184,8 @@ section h2 {
 section.success {
     color: #fff;
     background: #18bc9c;
+	background-size: cover;
+	background-image: url(http://i.imgur.com/wm7rwbz.jpg);
 }
 
 section.success a,
