changed font color
-

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -182,7 +182,7 @@ section h2 {
 }
 
 section.success {
-    color: #fff;
+    color: #18bc9c;
     background: #18bc9c;
 	background-size: cover;
 	background-image: url(http://i.imgur.com/v6wixZH.jpg);
