--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -185,7 +185,7 @@ section.success {
     color: #18bc9c;
     background: #18bc9c;
 	background-size: cover;
-	background-image: url(http://i.imgur.com/v6wixZH.jpg);
+	background-image: url(http://i.imgur.com/dAqOhOM.jpg);
 }
 
 section.success a,
