--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -182,7 +182,7 @@ section h2 {
 }
 
 section.success {
-    color: #fff;
+    color: #18bc9c;
     background: #18bc9c;
 	background-size: cover;
 	background-image: url(https://farm4.staticflickr.com/3890/14658383326_816b137b57_k.jpg);
