--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -185,7 +185,7 @@ section.success {
     color: #fff;
     background: #18bc9c;
 	background-size: cover;
-	background-image: url(http://i.imgur.com/ZU9GcZO.jpg);
+	background-image: url(http://i.imgur.com/nv3xTAx.jpg);
 }
 
 section.success a,
