--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -84,7 +84,7 @@ header {
     color: #fff;
     background: #18bc9c;
 	background-size: cover;
-	background-image: url('http://www.travelandleisure.com/sites/default/files/styles/1600x1000/public/ireland-landscape-cocaine1115.jpg?itok=0m3Rv9ry');  /* http://farm9.staticflickr.com//8868//18205140545_c48ca49018_h.jpg */
+	background-image: url('img/IMG_4811.jpg');  /* url('http://www.travelandleisure.com/sites/default/files/styles/1600x1000/public/ireland-landscape-cocaine1115.jpg?itok=0m3Rv9ry');  */
 }
 
 header .container {
