--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -461,3 +461,11 @@ footer .footer-below {
     display: none;
     opacity: 0;
 }
+
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
